// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RedirectIoAdminPage/> should render empty 1`] = `
<RedirectIoAdminPage__RedirectIoContent>
  <div
    className="box box-primary container-fluid"
  >
    <div
      className="box-header"
    >
      <h3
        className="box-title"
      >
        <FormattedMessage
          id="custom-url"
          values={Object {}}
        />
        <div
          className="horizontal-flex"
        >
          <div
            className="help-icon"
          >
            <Icon
              color="#3c8dbc"
              name="information"
              size={14}
            />
          </div>
          <div
            className="help-text"
          >
            <FormattedHTMLMessage
              id="online.support"
              tagName="span"
              values={Object {}}
            />
          </div>
        </div>
      </h3>
    </div>
    <div
      className="box-content"
    >
      <div
        className="section-container"
      >
        <h4>
          <RedirectIoAdminPage__RedirectIoLogo
            alt="redirection-io logo"
            src="https://redirection.io/images/favicon.png?1583833053"
          />
          Redirection.io
        </h4>
        <FormattedHTMLMessage
          id="redirect-service-description"
          tagName="span"
          values={Object {}}
        />
      </div>
      <div
        className="section-container"
      >
        <h4>
          <FormattedMessage
            id="http-process"
            values={Object {}}
          />
        </h4>
        <ol>
          <li>
            <FormattedHTMLMessage
              id="activate-redirection-service-step1"
              tagName="span"
              values={Object {}}
            />
          </li>
          <li>
            <FormattedHTMLMessage
              id="activate-redirection-service-step2"
              tagName="span"
              values={Object {}}
            />
          </li>
          <li>
            <FormattedMessage
              id="activate-redirection-service-step3"
              values={Object {}}
            />
          </li>
        </ol>
      </div>
      <div
        className="section-container"
      >
        <h4
          className="horizontal-flex"
        >
          <div>
            <FormattedMessage
              id="project-key"
              values={Object {}}
            />
          </div>
        </h4>
        <div
          className="project-key-flex"
        >
          <Field
            component={[Function]}
            divClassName="field-wrapper-div"
            id="project-id"
            name="projectId"
            type="text"
          />
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="primary"
            disabled={false}
            id="project-key-verify"
            onClick={[Function]}
          >
            <FormattedMessage
              id="verify"
              values={Object {}}
            />
          </Button>
        </div>
      </div>
      <div
        className="section-container"
      >
        <h4>
          <FormattedMessage
            id="Set-up-http-redirects"
            values={Object {}}
          />
        </h4>
        <FormattedHTMLMessage
          id="url-configuration-help-text"
          tagName="span"
          values={Object {}}
        />
      </div>
      <div>
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="primary"
          disabled={true}
          id="handle-url"
          onClick={[Function]}
        >
          <FormattedMessage
            id="handle-url"
            values={Object {}}
          />
        </Button>
      </div>
    </div>
  </div>
</RedirectIoAdminPage__RedirectIoContent>
`;

exports[`<RedirectIoAdminPage/> should render with key 1`] = `
<RedirectIoAdminPage__RedirectIoContent>
  <div
    className="box box-primary container-fluid"
  >
    <div
      className="box-header"
    >
      <h3
        className="box-title"
      >
        <FormattedMessage
          id="custom-url"
          values={Object {}}
        />
        <div
          className="horizontal-flex"
        >
          <div
            className="help-icon"
          >
            <Icon
              color="#3c8dbc"
              name="information"
              size={14}
            />
          </div>
          <div
            className="help-text"
          >
            <FormattedHTMLMessage
              id="online.support"
              tagName="span"
              values={Object {}}
            />
          </div>
        </div>
      </h3>
    </div>
    <div
      className="box-content"
    >
      <div
        className="section-container"
      >
        <h4>
          <RedirectIoAdminPage__RedirectIoLogo
            alt="redirection-io logo"
            src="https://redirection.io/images/favicon.png?1583833053"
          />
          Redirection.io
        </h4>
        <FormattedHTMLMessage
          id="redirect-service-description"
          tagName="span"
          values={Object {}}
        />
      </div>
      <div
        className="section-container"
      >
        <h4>
          <FormattedMessage
            id="http-process"
            values={Object {}}
          />
        </h4>
        <ol>
          <li>
            <FormattedHTMLMessage
              id="activate-redirection-service-step1"
              tagName="span"
              values={Object {}}
            />
          </li>
          <li>
            <FormattedHTMLMessage
              id="activate-redirection-service-step2"
              tagName="span"
              values={Object {}}
            />
          </li>
          <li>
            <FormattedMessage
              id="activate-redirection-service-step3"
              values={Object {}}
            />
          </li>
        </ol>
      </div>
      <div
        className="section-container"
      >
        <h4
          className="horizontal-flex"
        >
          <div>
            <FormattedMessage
              id="project-key"
              values={Object {}}
            />
          </div>
          <div
            className="ml-10"
          >
            <CheckCircle
              className="img-check-circle"
              color="#008000"
              size={15}
            />
          </div>
          <div
            className="green-text"
          >
            <FormattedMessage
              id="global.saved"
              values={Object {}}
            />
          </div>
        </h4>
        <div
          className="project-key-flex"
        >
          <Field
            component={[Function]}
            divClassName="field-wrapper-div"
            id="project-id"
            name="projectId"
            type="text"
          />
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="primary"
            disabled={false}
            id="project-key-verify"
            onClick={[Function]}
          >
            <FormattedMessage
              id="verify"
              values={Object {}}
            />
          </Button>
        </div>
      </div>
      <div
        className="section-container"
      >
        <h4>
          <FormattedMessage
            id="Set-up-http-redirects"
            values={Object {}}
          />
        </h4>
        <FormattedHTMLMessage
          id="url-configuration-help-text"
          tagName="span"
          values={Object {}}
        />
      </div>
      <div>
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="primary"
          disabled={false}
          id="handle-url"
          onClick={[Function]}
        >
          <FormattedMessage
            id="handle-url"
            values={Object {}}
          />
        </Button>
      </div>
    </div>
  </div>
</RedirectIoAdminPage__RedirectIoContent>
`;
